// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v1;

import "com/digitalasset/canton/protocol/v0/common.proto";
import "com/digitalasset/canton/protocol/v1/merkle.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

// Messages related to the transaction or transfer protocol sent by a mediator
// sbt protobufContinuityCheck will pass even if fields are added, because the mediator is trusted.

message InformeeTree {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  GenTransactionTree tree = 1;
}

// Renamed MediatorRejection -> MediatorReject
message MediatorReject {
  reserved 1; // removed "code" field
  string cause = 2; // renamed reason -> cause
  string error_code = 3;
  uint32 error_category = 4;
}

message MalformedMediatorRequestResult {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  string domain_id = 2;
  com.digitalasset.canton.protocol.v0.ViewType view_type = 3;
  MediatorReject rejection = 4; // MediatorRejection -> MediatorReject
}
